--- a/Index.css
+++ b/Index.css
@@ -1,3 +1,4 @@
+
 h1{
     color:#025157;
     font-weight: 100;
@@ -39,6 +40,13 @@ form{
     border-radius: 5px;
     border-width: 1px;
     padding: 15px;
+}
+.start{
+  color:white;
+    background-color: #025157;
+    border-radius: 5px;
+    border-width: 1px;
+    padding: 5px;
 }
 .star{
     color:white;
@@ -99,20 +107,85 @@ ul {
     padding: 10px;
     border: 0px;
 }
-
+@media (max-width: 575px) {
+  .navbar,
+  .actions {
+    display: none;
+  }
+  main {
+    margin-top: 130px;
+  }
+  h1 {
+    font-size: 30px;
+}
+.banner > img {
+  width: 100%;
+}
+}
 .promo{
     display: flex;
     width: 70%;
     margin: 100px auto;
     align-items: center;
 }
+@media (max-width: 575px) {
+  .promo {
+    flex-direction: column;
+    width: 90%;
+  }
+
+  .explanatory-video > video {
+    width: 100%;
+  }
+  .publish {
+    margin-top: 10px;
+  }
+  .publish > form {
+    flex-direction: column;
+  }
+
+  .publish > form > div {
+    height: 50px;
+    margin-top: 10px;
+    display: flex;
+  }
+
+  .publish > form > div > input {
+    width: 65%;
+  }
+  .publish > h3 {
+    font-size: 25px;
+    line-height: 1.2;
+  }
+}
+
+
 .publish{
     flex:1;
 }
+.publish > p {
+    font-family: 'Roboto', sans-serif;
+    color:#46484c;
+    text-align: center;
+    font-family: 'Roboto', sans-serif;
+}
+.publish > form{
+  font-family: 'Roboto', sans-serif;
+    color:#46484c;
+    text-align: center;
+    font-family: 'Roboto', sans-serif;
+}
+.publish > h2{
+    color:#025157;
+    font-weight: 500;
+    text-align: center;
+    font-family: 'Roboto', sans-serif;
+}
 .explanatory-video {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex: 2;
   }
   
   .explanatory-video img {
@@ -125,26 +198,91 @@ ul {
     left: 0;
     right: 0;
     background-color: #fffbf7;
+    z-index: 2;
   }
 body{
     margin-top: 285px;
     text-align: center;
+    background-color: #fffbf7;
 }
 .try{
     display: flex;
     justify-content: center;
 }
 .features {
-    display: grid;
-    grid-template: repeat(2, 1fr) / repeat(2, 330px);
-    background-color: #025157;
-    padding: 5% 10%;
-    }
-    .feature-card {
-        margin-bottom: 30px;
-        margin-left: 15px;
-        margin-right: 15px;
-        background-color: #fff;
-        border: 1px solid #dadada;
-        border-radius: 10px;
-      }
+  background-color: #025157;
+  padding: 5% 10%;
+  display: grid;
+  grid-template: repeat(2, 330px) / repeat(2, 1fr);
+}
+@media (max-width: 575px) {
+  /** Estilos para la sección principal y de publicidad */
+  .features {
+    grid-template: repeat(4, 1fr) / 1fr;
+    padding-left: 0;
+    padding-right: 0;
+  }
+  
+  .feature-image {
+    display: none;
+  }
+}
+
+.features .feature-card {
+  margin-bottom: 30px;
+  margin-left: 15px;
+  margin-right: 15px;
+  background-color: #fff;
+  border: 1px solid #dadada;
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  overflow: hidden;
+}
+
+.features .feature-card .feature-content {
+  padding: 30px 20px 40px 40px;
+  flex: 2;
+}
+
+.features .feature-card .feature-content > * {
+  margin-bottom: 1rem;
+  margin-top: 0;
+}
+
+.features .feature-card .feature-content img {
+  width: 50px;
+}
+
+.features .feature-card .feature-content h3 {
+  font-size: 24px;
+  color: #343434;
+  font-weight: 400;
+}
+
+.features .feature-card .feature-content p {
+  font-size: 16px;
+  color: #7e7e7e;
+  font-weight: 400;
+}
+
+.features .feature-card .feature-content a {
+  font-size: 16px;
+  color: #67b54b;
+  font-weight: 600;
+  text-decoration: none;
+}
+
+.features .feature-card .feature-image {
+  flex: 1;
+  width: 40%;
+  position: relative;
+  right: -50px;
+  height: 80%;
+}
+
+.features .feature-card .feature-image figure,
+.features .feature-card .feature-image img {
+  margin-top: 0;
+  height: 100%;
+}
