--- a/Index.css
+++ b/Index.css
@@ -1,288 +1,310 @@
+@import url("https://fonts.googleapis.com/css?family=Alegreya:900|Open+Sans|Slabo+27px&display=swap");
 
-h1{
-    color:#025157;
-    font-weight: 100;
-    text-align: center;
-    font-family: 'Roboto', sans-serif;
-    font-size: 70px;
+body {
+    background-color: #fffbf7;
+    font-family: "Open Sans", sans-serif;
 }
-h4{
-    color:#46484c;
-    text-align: center;
-    font-family: 'Roboto', sans-serif;
-}
-h6{
-    font-family: 'Roboto', sans-serif;
-    color:#46484c;
-    text-align: center;
-    font-family: 'Roboto', sans-serif;
-}
-.estrella{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
-    margin-bottom: 50px;
-}
-.collage{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 70%;
-}
-form{
-    padding: 10px;
 
+main {
+    margin-top: 285px;
+    text-align: center;
 }
-.tryit{
-    color:white;
-    background-color: #025157;
-    border-radius: 5px;
-    border-width: 1px;
-    padding: 15px;
-}
-.start{
-  color:white;
-    background-color: #025157;
-    border-radius: 5px;
-    border-width: 1px;
-    padding: 5px;
-}
-.star{
-    color:white;
-    background-color: #3cc505;
-    border-radius: 30px;
-    border-width: 2px;
-    padding: 5px;
-    margin:0px;
-}
-.header {
-	margin: 0px;
-    font-size:0;
-    bottom: auto;
-}
-ul {
-    list-style-type: none;
-    margin: 10px;
-    padding: 10px;
-    overflow: hidden;
-    background-color: #333;
-    width: 100%;
-  }
-  
-  li {
-    float: left;
-  }
-  
-  li a {
-    display: inline;
-    color: white;
-    text-align: left;
-    padding: 8px 70px;
-    text-decoration: none;
-    }
-  li a:hover:not(.active) {
-    background-color: #111;
-  }
-  
-  .active {
-    background-color: #4CAF50;
-    }
-  
-.header > * {
-  display: inline-block;
-  font-size: 16px;
-}
-.logo {
-    width: 55%;	
-    bottom: auto;
-}
-.navbar {
-	width: 70%;
-}
+
 .actions {
-    display: inline-block;
-    margin: 30px;
-    margin-top: 0px;
-    padding: 10px;
-    border: 0px;
+    text-align: right;
+    font-weight: 600;
+    font-size: 14px;
 }
-@media (max-width: 575px) {
-  .navbar,
-  .actions {
-    display: none;
-  }
-  main {
-    margin-top: 130px;
-  }
-  h1 {
-    font-size: 30px;
+
+.navbar {
+    text-align: center;
+    color: #025157;
+    font-weight: 500;
+    background:#fffbf7 ;
 }
-.banner > img {
-  width: 100%;
+
+.navbar-light .nav-item .nav-link {
+    color: #025157;
 }
+
+.navbar-light .navbar-toggler {
+    border-color: #025157;
 }
-.promo{
+
+.navbar-light .navbar-toggler-icon {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='rgb(3, 81, 77)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+}
+
+form {
+    height: 55px;
+}
+
+h1 {
+    color: #025157;
+    font-family: "Alegreya", serif;
+    font-size: 60px;
+    margin-bottom: 24px;
+}
+
+h4 {
+    color: #46484c;
+    font-family: "Slabo 27px", serif;
+    font-size: 20px;
+    margin-bottom: 30px;
+}
+
+button {
+    background-color: #025157;
+    color: #fff;
+    border: none;
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+    padding: 6px 20px;
+    margin-left: -10px;
+}
+
+p {
+    color: #8b8b8bcc;
+    margin-top: 15px;
+}
+
+.promo {
     display: flex;
     width: 70%;
     margin: 100px auto;
     align-items: center;
 }
-@media (max-width: 575px) {
-  .promo {
-    flex-direction: column;
-    width: 90%;
-  }
 
-  .explanatory-video > video {
-    width: 100%;
-  }
-  .publish {
-    margin-top: 10px;
-  }
-  .publish > form {
-    flex-direction: column;
-  }
-
-  .publish > form > div {
-    height: 50px;
-    margin-top: 10px;
-    display: flex;
-  }
-
-  .publish > form > div > input {
-    width: 65%;
-  }
-  .publish > h3 {
-    font-size: 25px;
-    line-height: 1.2;
-  }
-}
-
-
-.publish{
-    flex:1;
-}
-.publish > p {
-    font-family: 'Roboto', sans-serif;
-    color:#46484c;
-    text-align: center;
-    font-family: 'Roboto', sans-serif;
-}
-.publish > form{
-  font-family: 'Roboto', sans-serif;
-    color:#46484c;
-    text-align: center;
-    font-family: 'Roboto', sans-serif;
-}
-.publish > h2{
-    color:#025157;
-    font-weight: 500;
-    text-align: center;
-    font-family: 'Roboto', sans-serif;
-}
 .explanatory-video {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  flex: 2;
-  }
-  
-  .explanatory-video img {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex: 1;
+}
+
+.explanatory-video img {
     width: 120px;
     margin-top: 10px;
-  }
-  .fixed-header {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    background-color: #fffbf7;
-    z-index: 2;
-  }
-body{
-    margin-top: 285px;
-    text-align: center;
-    background-color: #fffbf7;
 }
-.try{
+
+.publish {
+    flex: 1;
+}
+
+.publish h3 {
+    font-family: 'Alegreya', serif;
+    font-size: 40px;
+    line-height: 48px;
+    color: #025157;
+}
+
+.publish > p {
+    font-size: 16px;
+    color: #343434;
+    line-height: 1.5;
+    margin-bottom: 20px;
+}
+
+.publish > form {
     display: flex;
-    justify-content: center;
 }
+
+.publish > form p {
+    color: #025157;
+    margin-right: 18px;
+}
+
 .features {
-  background-color: #025157;
-  padding: 5% 10%;
-  display: grid;
-  grid-template: repeat(2, 330px) / repeat(2, 1fr);
-}
-@media (max-width: 575px) {
-  /** Estilos para la sección principal y de publicidad */
-  .features {
-    grid-template: repeat(4, 1fr) / 1fr;
-    padding-left: 0;
-    padding-right: 0;
-  }
-  
-  .feature-image {
-    display: none;
-  }
+    background-color: #025157;
+    padding: 5% 10%;
+    display: grid;
+    grid-template: repeat(2, 330px) / repeat(2, 1fr);
 }
 
 .features .feature-card {
-  margin-bottom: 30px;
-  margin-left: 15px;
-  margin-right: 15px;
-  background-color: #fff;
-  border: 1px solid #dadada;
-  border-radius: 5px;
-  display: flex;
-  align-items: center;
-  overflow: hidden;
+    margin-bottom: 30px;
+    margin-left: 15px;
+    margin-right: 15px;
+    background-color: #fff;
+    border: 1px solid #dadada;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    overflow: hidden;
 }
 
 .features .feature-card .feature-content {
-  padding: 30px 20px 40px 40px;
-  flex: 2;
+    padding: 30px 20px 40px 40px;
+    flex: 2;
 }
 
 .features .feature-card .feature-content > * {
-  margin-bottom: 1rem;
-  margin-top: 0;
+    margin-bottom: 1rem;
+    margin-top: 0;
 }
 
 .features .feature-card .feature-content img {
-  width: 50px;
+    width: 50px;
 }
 
 .features .feature-card .feature-content h3 {
-  font-size: 24px;
-  color: #343434;
-  font-weight: 400;
+    font-size: 24px;
+    color: #343434;
+    font-weight: 400;
 }
 
 .features .feature-card .feature-content p {
-  font-size: 16px;
-  color: #7e7e7e;
-  font-weight: 400;
+    font-size: 16px;
+    color: #7e7e7e;
+    font-weight: 400;
 }
 
 .features .feature-card .feature-content a {
-  font-size: 16px;
-  color: #67b54b;
-  font-weight: 600;
-  text-decoration: none;
+    font-size: 16px;
+    color: #67b54b;
+    font-weight: 600;
+    text-decoration: none;
 }
 
 .features .feature-card .feature-image {
-  flex: 1;
-  width: 40%;
-  position: relative;
-  right: -50px;
-  height: 80%;
+    flex: 1;
+    width: 40%;
+    position: relative;
+    right: -50px;
+    height: 80%;
 }
 
 .features .feature-card .feature-image figure,
 .features .feature-card .feature-image img {
-  margin-top: 0;
-  height: 100%;
+    margin-top: 0;
+    height: 100%;
+}
+
+.success-stories {
+    display: flex;
+    background: #a1d683;
+    height: auto;
+    padding: 100px;
+}
+
+.success-stories .overview h2{
+    color: #025157;
+    font-family: "Alegreya", serif;
+    font-size: 51px;
+}
+
+.success-stories .overview p{
+    color: #343434;
+}
+
+.success-stories .overview img {
+    width: 500px;
+    max-width: 100%;
+}
+
+.stories-carousel {
+    width: 500px;
+}
+
+.stories-carousel .carousel-item .card .card-body {
+    text-align: left;
+    margin-top: 50px ;
+}
+
+.stories-carousel .carousel-item .card .card-body h4{
+    color: #025157;
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 20px;
+    margin-bottom: 12px;
+}
+
+.stories-carousel .carousel-item .card {
+    border-radius: 10px
+}
+
+.stories-carousel .carousel-item .card .results{
+    display: flex;
+}
+
+.stories-carousel .carousel-item .card .results img{
+    width: 50px;
+    height: 50px;
+}
+
+.stories-carousel .carousel-item .card-media {
+    position: relative;
+}
+
+.card-media img{
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
+}
+
+.carousel-indicators{
+    bottom: -40px;
+}
+
+.stories-carousel .carousel-item .card-media .company{
+    background: #f9da73;
+    border-radius: 50%;
+    width: 150px;
+    height: 150px;
+    position: absolute;
+    bottom:-40px;
+    left: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.stories-carousel .carousel-item .card-media .company img{
+    width: 100%;
+}
+
+@media (max-width: 575px) {
+    .banner > img {
+        width: 100%;
+    }
+
+    .promo {
+        flex-direction: column;
+        max-width: 90%;
+    }
+
+    .explanatory-video > video {
+        width: 100%;
+    }
+
+    .publish {
+        margin-top: 10px;
+    }
+
+    .publish > h3 {
+        font-size: 25px;
+        line-height: 1.2;
+    }
+
+    .publish > form {
+        flex-direction: column;
+    }
+
+    .publish > form > div {
+        height: 50px;
+        margin-top: 10px;
+    }
+
+    .publish > form > div > input {
+        width: 65%;
+    }
+
+    .features {
+        grid-template: repeat(4, 1fr) / 1fr;
+        padding-left: 0;
+        padding-right: 0;
+    }
+
+    .feature-image {
+        display: none;
+    }
 }
